src/objects/TIMBASURVEYS__PageBranchingRule__c.object
<CustomObject>
    <fields>
        <fullName>TIMBASURVEYS__ElseGoToPage__c</fullName>
        <label>ElseGoToPage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__GoToPage__c</fullName>
        <label>GoToPage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__SurveyPage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SurveyPage</label>
        <referenceTo>TIMBASURVEYS__SurveyPage__c</referenceTo>
        <relationshipLabel>PageBranchingRules</relationshipLabel>
        <relationshipName>PageBranchingRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__Survey__c</fullName>
        <label>Survey</label>
        <referenceTo>TIMBASURVEYS__Survey__c</referenceTo>
        <relationshipLabel>PageBranchingRules</relationshipLabel>
        <relationshipName>PageBranchingRules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>PageBranchingRule</label>
    <nameField>
        <label>PageBranchingRule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PageBranchingRules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>